# vectorizing_apple_notes

./: .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml
src/: config.py
src/extractors/: apple_notes_extractor.py
src/preprocessors/: text_preprocessor.py
src/storage/: faiss_store.py  vector_store.py
src/vectorizers/: transformer_vectorizer.py
